--- a/static/css/header_footer.css
+++ b/static/css/header_footer.css
@@ -104,7 +104,7 @@ h6 { font-size: 110%; }
     margin: 0.2em 0 0.2em 0;
 }
 
-#header-image {
+#header-image, #header-image-notext {
     vertical-align: top;
     margin-top: -5px;
     height: 42px;
@@ -169,7 +169,7 @@ h6 { font-size: 110%; }
 
 /* Bigger text in navbars */
     .navbar-default .navbar-nav > li > a {
-        font-size: 150%;
+        font-size: 130%;
         color: #69A54F;
     }
 
